--- a/ToolBar5/androidnewfeature/src/main/AndroidManifest.xml
+++ b/ToolBar5/androidnewfeature/src/main/AndroidManifest.xml
@@ -11,12 +11,20 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".CollapsingToolbarActivity"
+            android:label="@string/title_activity_collapsing_toolbar"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".TabLayoutActivity"
+            android:label="@string/title_activity_tab_layout"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
         <activity
-            android:name=".CollapsingToolbarActivity"
-            android:label="@string/title_activity_collapsing_toolbar"
+            android:name=".TabLayoutFramentActivity"
+            android:label="@string/title_activity_tab_layout_frament"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
