--- a/ToolBar5/androidnewfeature/src/main/AndroidManifest.xml
+++ b/ToolBar5/androidnewfeature/src/main/AndroidManifest.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fm.mow.com.androidnewfeature">
+    package="newfeature">
 
-
-
-    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,28 +9,45 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="newfeature.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".CollapsingToolbarActivity"
-            android:label="@string/title_activity_collapsing_toolbar"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".TabLayoutActivity"
-            android:label="@string/title_activity_tab_layout"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".TabLayoutFramentActivity"
-            android:label="@string/title_activity_tab_layout_frament"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="newfeature.activity.CollapsingToolbarActivity"
+            android:label="@string/title_activity_collapsing_toolbar"
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+
+        </activity>
+        <activity
+            android:name="newfeature.activity.TabLayoutActivity"
+            android:label="@string/title_activity_tab_layout"
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name="newfeature.activity.TabLayoutFramentActivity"
+            android:label="@string/title_activity_tab_layout_frament"
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
     </application>
 
