--- a/ToolBar5/app/src/main/AndroidManifest.xml
+++ b/ToolBar5/app/src/main/AndroidManifest.xml
@@ -34,6 +34,17 @@
             android:name="willson.activity.TabLayoutActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+
+        </activity>
+        <activity
+            android:name="willson.activity.CollapsingToolbarActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
