--- a/ToolBar5/app/build.gradle
+++ b/ToolBar5/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.0'
 
     defaultConfig {
         applicationId "willson.toolbar"
@@ -22,7 +22,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:support-annotations:27.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:palette-v7:23.0.0'
+    compile 'com.android.support:palette-v7:23.1.1'
 }
