--- a/ToolBar5/app/build.gradle
+++ b/ToolBar5/app/build.gradle
@@ -2,7 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+//    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
+
 
     defaultConfig {
         applicationId "willson.toolbar"
